# Mamba-in-rust

./: .gitignore  LICENSE  ModelArgs.rs  README.md
Mamba/: Cargo.toml
Mamba/artifacts/checkpoint/: model-1.mpk  model-23.mpk  model-80.mpk
Mamba/src/: data.rs  main.rs  tokenizer.rs  training.rs
Mamba/src/Model/: MambaNLP.rs  ResidualBlock.rs
Mamba/src/data/: mod.rs
Mamba/src/model/: MambaBlock.rs  MambaNLP.rs  ModelArgs.rs  mamba_block.rs  mamba_nlp.rs  mod.rs  model_args.rs  residual_block.rs
MambaAudric/: Cargo.toml
MambaAudric/data/cache/: train.sqlite
MambaAudric/src/: main.rs
MambaAudric/src/Data/: data.rs
MambaAudric/src/Model/: MambaBlock.rs  MambaNLP.rs  ModelArgs.rs  ResidualBlock.rs
MambaAudric/src/data/: mod.rs
MambaAudric/src/model/: ResidualBlock.rs
docs/: Documentation.md
