[package]
name = "MambaAudric"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
burn = { version = "~0.18", features = ["std", "tui", "train", "vision", "wgpu", "fusion"], default-features = false }
burn-dataset = "0.19.1"
reqwest = { version = "0.12.24", features = ["blocking"] }
rusqlite = "0.37.0"
serde = "1.0.228"
serde_json = "1.0.145"

# burn = "0.18.0"
