[package]
name = "MambaAudric"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow      = "1.0"
burn        = { version = "~0.18", features = [
    "std", "tui", "train", "vision",
    "wgpu", "fusion", "ndarray", "autodiff"
], default-features = false }
rusqlite    = "0.37.0"
burn-dataset = "0.18"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
openssl     = { version = "0.10", features = ["vendored"] }
rayon       = "1"
ureq        = "2"
tokenizers  = { version = "0.20", default-features = false, features = ["onig"] }
